--- a/src/AgendamentoConsultorio/AgendamentoConsultorio.UIDesktop/Views/MainWindow.xaml
+++ b/src/AgendamentoConsultorio/AgendamentoConsultorio.UIDesktop/Views/MainWindow.xaml
@@ -5,8 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AgendamentoConsultorio.UIDesktop.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Height="450" Width="800" WindowStartupLocation="CenterScreen" Closing="Window_Closing" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Grid Background="CadetBlue" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <Label Content="Consultório Cruz Azul" Foreground="White" FontWeight="Bold" FontSize="16" />
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Border BorderBrush="CadetBlue" BorderThickness="1" CornerRadius="2">
+                <Grid Width="auto">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Border BorderBrush="LightGray" BorderThickness="2" CornerRadius="2" Cursor="Hand"
+                            Margin="3,7">
+                        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5">
+                            <Ellipse Fill="AliceBlue" Stroke="AliceBlue" Width="10" Height="10" />
+                            <Label Content="Doutor" />
+                        </StackPanel>
+                    </Border>
+                    <Border Grid.Row="1" BorderBrush="LightGray" BorderThickness="2" CornerRadius="2" Cursor="Hand" 
+                            Margin="3,7">
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Ellipse Fill="AliceBlue" Stroke="AliceBlue" Width="10" Height="10" />
+                            <Label Content="Paciente" />
+                        </StackPanel>
+                    </Border>
+                    <Border Grid.Row="2" BorderBrush="LightGray" BorderThickness="2" CornerRadius="2" Cursor="Hand"
+                            Margin="3,7">
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Ellipse Fill="AliceBlue" Stroke="AliceBlue" Width="10" Height="10" />
+                            <Label Content="Consulta" />
+                        </StackPanel>
+                    </Border>
+                </Grid>
+            </Border>
+            <Grid Grid.Column="1" Background="DarkBlue">
+
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
